re PR tree-optimization/35821 (Internal compiler error: segmentation fault)

PR tree-optimization/35821
	* tree-vect-transform.c (vect_create_data_ref_ptr): Add check that
	NEW_STMT_LIST is not NULL.

From-SVN: r134136